progress commit: polishing the map layers panel

--- a/mage/src/main/res/layout/fragment_map_layers_tiles.xml
+++ b/mage/src/main/res/layout/fragment_map_layers_tiles.xml
@@ -17,7 +17,8 @@
         android:id="@+id/base_layer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        >
+    </Spinner>
 
     <TextView
         android:id="@+id/tile_overlays_label"
