--- a/mage/src/main/res/layout/cache_overlay_list_item.xml
+++ b/mage/src/main/res/layout/cache_overlay_list_item.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <android.support.constraint.Guideline
+        android:id="@+id/vertical_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5"
+        />
 
     <ImageView
         android:id="@+id/overlay_item_image"
@@ -10,8 +18,9 @@
         android:layout_height="24dp"
         android:layout_margin="8dp"
         android:contentDescription="@string/overlay_item_image_default_content_description"
+        app:layout_constraintTop_toTopOf="@id/vertical_center"
+        app:layout_constraintBottom_toBottomOf="@id/vertical_center"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/overlay_item_name"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         />
@@ -19,11 +28,33 @@
     <TextView
         android:id="@+id/overlay_item_name"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@+id/overlay_item_image"
+        android:layout_height="wrap_content"
+        style="@style/ListTextPrimary"
+        app:layout_constraintTop_toTopOf="@id/vertical_center"
+        app:layout_constraintBottom_toBottomOf="@id/vertical_center"
         app:layout_constraintLeft_toRightOf="@+id/overlay_item_image"
         app:layout_constraintRight_toLeftOf="@+id/overlay_item_enabled"
-        app:layout_constraintBottom_toBottomOf="@+id/overlay_item_image"
+        />
+
+    <TextView
+        android:id="@+id/overlay_item_detail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        style="@style/ListTextSecondary"
+        app:layout_constraintTop_toBottomOf="@+id/overlay_item_name"
+        app:layout_constraintLeft_toLeftOf="@+id/overlay_item_name"
+        app:layout_constraintRight_toRightOf="@+id/overlay_item_name"
+        />
+
+    <ImageView
+        android:id="@+id/overlay_item_drag_icon"
+        android:src="@drawable/ic_swap_vert_black_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="12dp"
+        app:layout_constraintRight_toLeftOf="@id/overlay_item_enabled"
+        app:layout_constraintTop_toTopOf="@id/vertical_center"
+        app:layout_constraintBottom_toBottomOf="@id/vertical_center"
         />
 
     <android.support.v7.widget.SwitchCompat
@@ -31,9 +62,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:layout_constraintTop_toTopOf="@id/overlay_item_name"
-        app:layout_constraintBottom_toBottomOf="@id/overlay_item_name"
-        app:layout_constraintLeft_toRightOf="@id/overlay_item_name"
+        app:layout_constraintTop_toTopOf="@id/vertical_center"
+        app:layout_constraintBottom_toBottomOf="@id/vertical_center"
+        app:layout_constraintLeft_toRightOf="@+id/overlay_item_name"
         app:layout_constraintRight_toRightOf="parent"
         />
 
