--- a/mage/src/main/res/layout-land/fragment_map.xml
+++ b/mage/src/main/res/layout-land/fragment_map.xml
@@ -7,6 +7,14 @@
     android:layout_height="match_parent"
     >
 
+    <android.support.constraint.Guideline
+        android:id="@+id/map_overlays_anchor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.0"
+        />
+
     <FrameLayout
         android:id="@+id/map_wrapper"
         android:layout_width="0dp"
@@ -28,7 +36,7 @@
         android:background="@drawable/map_search_foreground"
         android:visibility="gone"
         app:layout_constraintTop_toTopOf="@+id/map_search_button"
-        app:layout_constraintLeft_toRightOf="@+id/zoom_button"
+        app:layout_constraintLeft_toRightOf="@+id/map_overlays_anchor"
         app:layout_constraintRight_toLeftOf="@+id/map_search_button"
         >
 
@@ -46,17 +54,6 @@
     </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/zoom_button"
-        android:src="@drawable/ic_my_location_black_24dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        app:theme="@style/AppTheme.AlternateFAB"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/map_overlays_anchor"
-        />
-
-    <android.support.design.widget.FloatingActionButton
         android:id="@+id/map_search_button"
         android:src="@drawable/ic_search_black_24dp"
         android:layout_width="wrap_content"
@@ -65,18 +62,32 @@
         app:backgroundTint="@color/map_search_button"
         app:theme="@style/AppTheme.AlternateFAB"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/zoom_button"
+        app:fabSize="mini"
         />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/map_layer_options"
+        android:id="@+id/zoom_button"
+        android:src="@drawable/ic_my_location_black_24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        app:theme="@style/AppTheme.AlternateFAB"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/map_layer_button"
+        app:fabSize="mini"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/map_layer_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
         android:src="@drawable/ic_layers_black_24dp"
         app:theme="@style/AppTheme.AlternateFAB"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/map_overlays_anchor"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:fabSize="mini"
         />
 
     <android.support.design.widget.FloatingActionButton
@@ -88,14 +99,6 @@
         app:theme="@style/AppTheme.PrimaryFAB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/map_overlays_anchor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.0"
         />
 
     <FrameLayout
