--- a/mage/src/main/res/layout/view_idp_signin_button.xml
+++ b/mage/src/main/res/layout/view_idp_signin_button.xml
@@ -4,14 +4,14 @@
     android:layout_height="wrap_content">
 
      <Button
-         android:id="@+id/oauth_button"
+         android:id="@+id/idp_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:layout_marginBottom="4dp"
          android:drawablePadding="0dp"
          android:backgroundTint="?attr/colorPrimary"
-         android:drawableLeft="@drawable/oauth_icon"
+         android:drawableLeft="@drawable/idp_icon"
          android:textColor="@color/md_white_1000"
          android:text="Sign In" />
 
